--- a/enrollment.html
+++ b/enrollment.html
@@ -234,14 +234,6 @@
                                 </div>
                             </div>
                             <div class="flex flex-wrap -mx-3 mb-6">
-                                <div class="w-full px-3 mb-6 md:mb-0">
-                                    <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-mailing-address">
-                                        Mailing Address  <span class="text-red-400">*</span> <span class="text-xs text-gray-500">(If Not Same As Above)</span>
-                                    </label>
-                                    <textarea class="appearance-none block h-24 w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" id="grid-mailing-address"></textarea>
-                                </div>
-                            </div>
-                            <div class="flex flex-wrap -mx-3 mb-6">
                                 <div class="w-full md:w-1/2 px-3">
                                     <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-email">
                                         E-Mail <span class="text-red-400">*</span>
@@ -260,6 +252,7 @@
                                 <div class="w-full md:w-1/2 px-3">
                                     <label class="block text-sm font-medium leading-5 text-gray-700 mb-2" for="grid-city">
                                         Shipping Address
+                                        <span class="text-xs text-gray-500">(Same As Above)</span>
                                     </label>
                                     <input type="checkbox" class="form-checkbox h-8 w-8 text-primary transition duration-150 ease-in-out shipping-checked" checked>
                                 </div>
