--- a/checkout.html
+++ b/checkout.html
@@ -119,7 +119,7 @@
                     <div class="md:grid md:grid-cols-3 md:gap-6">
                         <div class="md:col-span-1">
                             <div class="mb-4">
-                                <h2 class="text-2xl leading-7 font-semibold text-gray-900 mb-3">1. Alcohol Monitoring</h2>
+                                <h2 class="text-2xl leading-7 font-semibold text-gray-900 mb-3">Alcohol Monitoring</h2>
                                 <img class="" src="assets/images/alcohol-testing.jpg" alt="">
                             </div>
                         </div>
