--- a/product-details.html
+++ b/product-details.html
@@ -194,7 +194,7 @@
                                                 <div class="text-gray-700 my-2 sm:text-xl font-bold sm:font-medium">Estimate: $1,950</div>
                                             </div>
                                             <div class="flex items-center mt-6">
-                                                <button class="w-full px-8 py-2 bg-indigo-600 text-white text-sm font-medium rounded hover:bg-indigo-500 focus:outline-none focus:bg-indigo-500 uppercase tracking-widest">Checkout</button>
+                                                <button class="w-full px-8 py-2 bg-primary text-white text-sm font-medium rounded focus:outline-none uppercase tracking-widest">Proceed to Pay</button>
                                             </div>
                                         </div>
                                     </div>
