--- a/checkout.html
+++ b/checkout.html
@@ -116,16 +116,78 @@
                 </div>
 
                 <div class="mt-8 bg-white shadow-lg px-4 py-4 rounded sm:rounded-lg sm:p-6 m-4 sm:m-8 sm:mt-10 border">
-                    <div class="md:grid md:grid-cols-3 md:gap-6">
-                        <div class="md:col-span-1">
-                            <div class="mb-4">
-                                <h2 class="text-2xl leading-7 font-semibold text-gray-900 mb-3">Alcohol Monitoring</h2>
-                                <img class="" src="assets/images/alcohol-testing.jpg" alt="">
+                    <div class="sm:grid sm:grid-cols-4 sm:gap-6 border-b pb-4 mb-4">
+                        <div class="sm:col-span-1">
+                            <img class="lg:h-36" src="assets/images/alcohol-testing.jpg" alt="">
+                        </div>
+                        <div class="mt-5 sm:mt-0 sm:col-span-3">
+                            <div class="flex flex-wrap -mx-3 items-center">
+                                <div class="w-full sm:w-3/4 px-3 mb-6 sm:mb-0">
+                                    <div class="mb-4">
+                                        <h2 class="text-2xl leading-7 font-semibold text-gray-900 mb-3">1. Alcohol Monitoring</h2>
+                                        <div class="flex">
+                                            <input type="number" class="appearance-none block w-20 px-3 py-2 border border-gray-300 rounded-sm placeholder-gray-400 focus:outline-none
+                                            focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5 mr-2" value="1">
+                                            <button type="button" class="inline-flex items-center px-2.5 py-1.5 text-xs leading-4 font-medium rounded text-white bg-green-600 hover:bg-green-500 focus:outline-none focus:border-green-700 focus:shadow-outline-green active:bg-green-700 transition ease-in-out duration-150 mr-2">
+                                                Update
+                                            </button>
+                                            <button type="button" class="inline-flex items-center px-2.5 py-1.5 text-xs leading-4 font-medium rounded text-white bg-red-600 hover:bg-red-500 focus:outline-none focus:border-red-700 focus:shadow-outline-red active:bg-red-700 transition ease-in-out duration-150">
+                                                Remove
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="mb-4">
+                                        <div class="text-lg leading-6 font-medium text-gray-900 mb-2">
+                                            Shipping Cost: $35
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="w-full sm:w-1/4 px-3">
+                                    <div class="flex items-center justify-end my-2 text-gray-700 my-2 text-xl font-bold">
+                                        <div class="font-semibold">$350</div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="mt-5 md:mt-0 md:col-span-2">
+                    </div>
+
+                    <div class="sm:grid sm:grid-cols-4 sm:gap-6 border-b pb-4 mb-4">
+                        <div class="sm:col-span-1">
+                            <img class="lg:h-36" src="assets/images/gps-tracking.jpg" alt="">
+                        </div>
+                        <div class="mt-5 sm:mt-0 sm:col-span-3">
+                            <div class="flex flex-wrap -mx-3 items-center">
+                                <div class="w-full sm:w-3/4 px-3 mb-6 sm:mb-0">
+                                    <div class="mb-4">
+                                        <h2 class="text-2xl leading-7 font-semibold text-gray-900 mb-3">2. Location Monitoring</h2>
+                                        <div class="flex">
+                                            <input type="number" class="appearance-none block w-20 px-3 py-2 border border-gray-300 rounded-sm placeholder-gray-400 focus:outline-none
+                                            focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5 mr-2" value="1" disabled>
+                                            <button type="button" class="inline-flex items-center px-2.5 py-1.5 text-xs leading-4 font-medium rounded text-white bg-red-600 hover:bg-red-500 focus:outline-none focus:border-red-700 focus:shadow-outline-red active:bg-red-700 transition ease-in-out duration-150">
+                                                Remove
+                                            </button>
+                                        </div>
+                                    </div>
+                                    <div class="mb-4">
+                                        <div class="text-lg leading-6 font-medium text-gray-900 mb-2">
+                                            Shipping Cost: $35
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="w-full sm:w-1/4 px-3">
+                                    <div class="flex items-center justify-end my-2 text-gray-700 my-2 text-xl font-bold">
+                                        <div class="font-semibold">$350</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="sm:grid sm:grid-cols-4 sm:gap-6">
+                        <div class="sm:col-span-1"></div>
+                        <div class="mt-5 sm:mt-0 sm:col-span-4 lg:col-span-3">
                             <div class="flex flex-wrap -mx-3 mb-6">
-                                <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+                                <div class="w-full sm:w-1/2 px-3 mb-6 sm:mb-0">
                                     <div class="mb-4">
                                         <div class="text-lg leading-6 font-medium text-gray-900 mb-2">
                                             Shipping Address
@@ -136,45 +198,26 @@
                                             Quas cupiditate laboriosam fugiat.
                                         </div>
                                     </div>
-                                    <div class="mb-4">
-                                        <div class="text-lg leading-6 font-medium text-gray-900 mb-2">
-                                            Estimate Shipping: $35
-                                        </div>
-                                    </div>
                                 </div>
-                                <div class="w-full md:w-1/2 px-3">
+                                <div class="w-full sm:w-1/2 px-3">
                                     <div class="space-y-2">
-                                        <h2 class="text-lg leading-6 font-medium text-gray-900">Total Amount:</h2>
                                         <div class="w-full max-w-lg float-right">
-                                            <div class="md:flex">
-                                                <div class="w-full">
-                                                    <div class="">
-                                                        <div class="flex items-center justify-between my-2">
-                                                            <div class="text-gray-700">Device Rental:</div>
-                                                            <div class="text-gray-700 font-semibold">$500</div>
-                                                        </div>
-                                                        <div class="flex items-center justify-between my-2">
-                                                            <div class="text-gray-700">Deposit:</div>
-                                                            <div class="text-gray-700 font-semibold">$500</div>
-                                                        </div>
-                                                        <div class="flex items-center justify-between my-2">
-                                                            <div class="text-gray-700">Daily Monitoring Fee:</div>
-                                                            <div class="text-gray-700 font-semibold">$500</div>
-                                                        </div>
-                                                        <div class="flex items-center justify-between my-2">
-                                                            <div class="text-gray-700">Case Manager Fee:</div>
-                                                            <div class="text-gray-700 font-semibold">$500</div>
-                                                        </div>
-                                                        <div class="flex items-center justify-between my-2">
-                                                            <div class="text-gray-700">Estimated Shipping:</div>
-                                                            <div class="text-gray-700 font-semibold">$35</div>
-                                                        </div>
-                                                        <hr class="my-2">
-                                                        <div class="flex items-center justify-between my-2 text-gray-700 my-2 sm:text-xl font-bold sm:font-medium">
-                                                            <div class="">Total Pay:</div>
-                                                            <div class="font-semibold">$2,000</div>
-                                                        </div>
+                                            <div class="sm:flex">
+                                                <div class="w-full">   
+                                                    <div class="flex items-center justify-between my-2">
+                                                        <div class="text-gray-700">Sub Total:</div>
+                                                        <div class="text-gray-700 font-semibold">$700</div>
                                                     </div>
+                                                    <div class="flex items-center justify-between my-2">
+                                                        <div class="text-gray-700">Shipping Cost:</div>
+                                                        <div class="text-gray-700 font-semibold">$70</div>
+                                                    </div>
+                                                    <hr class="my-2">
+                                                    <div class="flex items-center justify-between my-2 text-gray-700 my-2 sm:text-xl font-bold sm:font-medium">
+                                                        <div class="">Total Pay:</div>
+                                                        <div class="font-semibold">$770</div>
+                                                    </div>
+                                                    
                                                     <div class="flex items-center mt-6">
                                                         <button class="w-full px-8 py-2 bg-primary text-white text-sm font-medium rounded focus:outline-none uppercase tracking-widest">Checkout</button>
                                                     </div>
@@ -187,6 +230,7 @@
                         </div>
                     </div>
                 </div>
+
 
                 <footer class="bg-white">
                     <div class="max-w-screen-xl mx-auto py-12 px-4 overflow-hidden space-y-8 sm:px-6 lg:px-8">
