--- a/product-details.html
+++ b/product-details.html
@@ -194,7 +194,7 @@
                                                 <div class="text-gray-700 my-2 sm:text-xl font-bold sm:font-medium">Estimate: $1,950</div>
                                             </div>
                                             <div class="flex items-center mt-6">
-                                                <a href="checkout.html" class="w-full px-8 py-2 bg-primary text-white text-center text-sm font-medium rounded focus:outline-none uppercase tracking-widest">Proceed to Pay</a>
+                                                <a href="checkout.html" class="w-full px-8 py-2 bg-primary text-white text-center text-sm font-medium rounded focus:outline-none uppercase tracking-widest">Add to Cart</a>
                                             </div>
                                         </div>
                                     </div>
