--- a/checkout.html
+++ b/checkout.html
@@ -84,7 +84,7 @@
                                         <span class="hidden md:block">Enrolled Services</span>
                                     </a>
 
-                                    <a href="#" class="group flex justify-center md:justify-start items-center py-2 md:px-2 text-sm leading-5 font-medium rounded-md text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150"
+                                    <a href="documents.html" class="group flex justify-center md:justify-start items-center py-2 md:px-2 text-sm leading-5 font-medium rounded-md text-gray-700 hover:text-gray-900 hover:bg-gray-50 focus:outline-none focus:bg-gray-50 transition ease-in-out duration-150"
                                         title="Documents &amp; Certifications">
                                         <svg class="md:mr-3 h-6 w-6 text-gray-400 group-hover:text-gray-500 group-focus:text-gray-500 transition ease-in-out duration-150"
                                             fill="none" viewBox="0 0 24 24" stroke="currentColor">
